More footer tweaks and fixed header menu staying open on mobile when clicking on link

--- a/src/app/component/footer/footer.css
+++ b/src/app/component/footer/footer.css
@@ -1,3 +1,4 @@
 .margin-bottom {
-    margin-bottom: 0 !important;
+  margin-bottom: -1px;
+  padding-bottom: env(safe-area-inset-bottom);
 }
